fix: fixed issues after pom.xml rollback